--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,12 @@
 .header {
-  width: 100%;
+  width: 70rem;
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
+  /* left: 0; */
+  /* right: 0; */
   z-index: 39;
-  padding: 0.5rem 1rem;
+  /* padding: 0.5rem 1rem; */
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,4 +15,29 @@
   border-bottom-left-radius: 0.375rem;
   background-color: #0d1117;
   background-color: #07090e;
+}
+
+.header {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .header {
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px) {
+  .header {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px) {
+  .header {
+    max-width: 64rem;
+  }
+}
+@media (min-width: 1280px) {
+  .header {
+    max-width: 70rem;
+  }
 }
