--- a/src/globals.css
+++ b/src/globals.css
@@ -28,7 +28,7 @@ body {
   text-decoration: line-through;
   text-decoration-color: #1e293b;
 }
-
+/* 
 @media (min-width: 768px) {
   .taskTitle.cheked::after {
   content: "Tarefa Finalizada";
@@ -39,8 +39,42 @@ body {
   color: #84cc16;
   font-size: .90rem;
 }
+} */
+
+.inputSave {
+  width: 100%;
+  height: 2.5rem;
+  background-color: transparent;
+
+  padding-left: 1rem/* 16px */;
+  padding-right: 1rem/* 16px */;
+
+  border-radius: 0.25rem/* 4px */;
+
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+
+  color: #94a3b8;
+  font-size: 1rem/* 16px */;
+  line-height: 1.5rem/* 24px */;
+  font-weight: 500;
 }
 
+.inputSave:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.inputSave::placeholder {
+  
+  color: #94a3b8;
+}
+
+@media (min-width: 768px) {
+  .inputSave {
+    width: 75%;
+  }
+}
 
 .button {
   border-radius: 0.25rem;
@@ -48,6 +82,7 @@ body {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 500ms;
+  
   font-size: 0.875rem/* 14px */;
   line-height: 1.25rem/* 20px */;
   font-weight: 500;
@@ -57,14 +92,13 @@ body {
 
 .button.save {
   background-color: #07090e;
-
 }
 
 .button.save:hover {
   background-color: #166534;
   color: #bbf7d0;
 }
-
+/* 
 .button.edit:hover {
 background-color: #854d0e;
 color: #fef08a;
@@ -79,7 +113,7 @@ color: #fef08a;
 .button.remove:hover {
 background-color: #991b1b;
 color: #fecaca
-}
+} */
 
 ::-webkit-scrollbar {
   width: 8px;
